Update to Spring Boot 2.0.0.RELEASE and Gradle 4.6