@@ -1,15 +1,15 @@
 buildscript {
 	ext {
-		kotlinVer = '1.2.10'
-		springBootVer = '2.0.0.M7'
-		kotlinLoggingVer = '1.4.8'
+		kotlinVer = '1.2.21'
+		springBootVer = '2.0.0.RELEASE'
+		kotlinLoggingVer = '1.5.3'
 
 		propdepsPluginVer = '0.0.10.RELEASE'
 		versionPluginVer = '0.17.0'
 
-		junitJupiterVer = '5.0.2'
-		junitPlatformVer = '1.0.2'
-		testContainersVer = '1.5.1'
+		junitJupiterVer = '5.1.0'
+		junitPlatformVer = '1.1.0'
+		testContainersVer = '1.6.0'
 	}
 
 	repositories {
@@ -91,12 +91,19 @@ bootJar {
 	archiveName 'app.jar'
 }
 
-junitPlatform {
-	enableStandardTestTask true
+test {
+	useJUnitPlatform {
+		includeEngines 'junit-jupiter'
+	}
+	doFirst {
+		jvmArgs = [
+			'--add-modules', 'java.xml.ws.annotation'
+		]
+	}
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '4.4'
+	gradleVersion = '4.6'
 	distributionType = Wrapper.DistributionType.ALL
 }
 
